NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.2.0
- NEW : Crop thumbnails manually (THX to Simone Fumagalli)
- Bugfix : init column script after document is ready
- Bugfix : Upgrade routine didn't add sortorder to correct table (THX to Uwe)

V1.1.0 - 26.01.2009
- NEW : Pagination for album page via custom fields ('ngg_paged_Galleries')
- NEW : Support for fixed number of columns inside the gallery
- NEW : Added pagination for galleries and images in admin section
- NEW : New action hook after image is added to database, called 'ngg_added_new_image' 
- NEW : New template for caption below images, called via [nggallery id=x template=caption]
- Added : SWFUpload V2.2.0 B4
- Changed : Rework of Manage image tables
- Changed : Move imagerotator.swf to wp-content/uploads
- Changed : Added a URL field to setup the path to the Imagerotator
- Changed : Add additional parameter to gallery object
- Changed : Load donators list external
- Bugfix : Style fixes for tables in IE7
- Bugfix : All albums code couldn't use the slideshow, query is empty for 0
- Bugfix : Htmlentities() for links in the a href title description
- Bugfix : Clean up mode for singlepic
- Bugfix : Typo in widget settings

V1.0.2 - 19.12.2008
- Added : Option to enable/disable the MediaRSS Feed
- Added : For flash under FF3/WIN we should use outline: none; 
- Added : Use sort order also for Media RSS
- Changed : Descending order for TinyMCE Editor
- Changed : Added screencolor flashvar as bgcolor for the flash slideshow
- Changed : Remove link to gallery in sidebar widget
- Bugfix : Check for empty gallery title and show name instead
- Bugfix : Album id=all / Album id=0 didn't show content
- Bugfix : Check for a empty description and alttext
- Bugfix : Remove HTML tags from slideshow 
- Bugfix : Load SWFobject always when the imagerotator exist
- Bugfix : Zip-Upload in existing gallery failed
- Bugifx : Typo in functions.php (THX to David Horat)

V1.0.1 - 11.12.2008